Fix heading align

--- a/src/sass/layout/_features.sass
+++ b/src/sass/layout/_features.sass
@@ -20,10 +20,6 @@
   display: flex
   flex-direction: column
 
-// .features__box--desktop
-//   +media(s)
-//    display: none 
-
 .features__list
   margin-top: 22px
   margin-left: 77px
@@ -50,6 +46,7 @@
   text-align: center
   letter-spacing: -0.03em
   color: #23242A
+  text-align: left
 
   +media(s)
    font-size: 16px
